Fixing the small memory image being stretched problem

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -753,9 +753,12 @@ button#create-scrapbook-button
     margin: 0
     margin-bottom: 2em
     padding: 2em
+    display: table
+    width: 100%
 
     a
-      display: inline-block
+      display: table-cell
+      vertical-align: middle
 
       img
         max-width: 80%
